- BUG: If the cached log history is incomplete, showing log in off-line mode 
       would include (some) revisions that don't belong to the respective 
       path. (Stefan Fuhrmann)
- BUG: When blaming a file with an Unicode BOM, a dot was shown in the first
       line of the blamed text. (Stefan)

Version 1.5.0-RC2
- NEW: the issue tracker integration supports now relative urls. (Stefan)
- NEW: Option to bypass the recycle bin when reverting. (Stefan)
- CHG: When diffing a file with the previous revision, don't create a temp
       file for the file in the working copy. (Stefan)
- CHG: In log cache settings: show one randomly selected URL instead of the
       UUID, if there is more than one URL to a repository. (Stefan Fuhrmann)
- CHG: In commit dialog: Fetch log message history before running the 
       status query (Stefan Fuhrmann)
- BUG: Crash when browsing through the settings dialog. (Stefan)
- BUG: URLs were not properly escaped in the revision graph for showing the
       log or merging. (Stefan)
- BUG: The root path was not set correctly when creating a patch. This lead
       to the patchfile containing only the filename and not the relative path
       if only one file was chosen/available to create the patch for. (Stefan)
- BUG: TortoiseMerge could crash when diffing empty files. (Stefan)
- BUG: Applying a patchfile for an UTF8 file (with BOM marker) with changes 
       in the first line did not work due to the UTF8 BOM marker. (Stefan)
- BUG: TortoiseMerge sometimes did not show the line diff bar. (Stefan)
- BUG: Crash when removing unmodified files from a changelist. (Stefan)
- BUG: 0-sized columns in status grid when fetching status. (Stefan Fuhrmann)
- BUG: Random strings in recent messages lists after a fresh install
       when not all 25 entries are being used yet. (Stefan Fuhrmann)
- BUG: Renaming a folder in the repository browser tree list lead to
       refreshing problems because the URL was still used from before